Recycle the collections for business objects to reduce memory usage and improvement performance significantly #1024